--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1414,6 +1414,9 @@ html {
 .z-0 {
   z-index: 0;
 }
+.m-auto {
+  margin: auto;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1690,9 +1693,17 @@ html {
 .stroke-current {
   stroke: currentColor;
 }
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+.object-scale-down {
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
 .p-6 {
   padding: 1.5rem;
