--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2282,6 +2282,11 @@ html {
     background-color: hsla(var(--p) / var(--tw-bg-opacity));
   }
 
+  .dark\:bg-error {
+    --tw-bg-opacity: 1;
+    background-color: hsla(var(--er) / var(--tw-bg-opacity));
+  }
+
   .dark\:text-gray-500 {
     --tw-text-opacity: 1;
     color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2295,6 +2300,11 @@ html {
   .dark\:text-gray-400 {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-gray-200 {
+    --tw-text-opacity: 1;
+    color: rgb(229 231 235 / var(--tw-text-opacity));
   }
 
   .dark\:hover\:bg-gray-700:hover {
